[FIX] more spacing out of buttons and columns for calendars in admin panel

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3216,7 +3216,7 @@ div.form-group label.error {
 .tiki .input-group .chosen-container {
   width: 110% !important; }
 
-.tiki-admin_tracker_fields .input-group .chosen-container, .tiki-view_tracker .input-group .chosen-container {
+.tiki-admin_tracker_fields .input-group .chosen-container, .tiki-view_tracker .input-group .chosen-container, .calendar_timespan .input-group .chosen-container, .calendar_minute_interval .input-group .chosen-container {
   width: auto !important; }
 
 .tiki .chosen-container-single, .tiki #assign_order_chosen.chosen-container {
